auto-test/tests/chapter_17/invalid_types/void/no_return_value.c
int foo(void) {
  
  
  return;
}

int main(void) {
  foo();
  return 0;
}